[package]
name = "kvs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "*", features = ["derive"]}
assert_cmd = "*"
predicates = "*"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
